Amelioration de la Library

--- a/templates/client/includes/sidebar.html
+++ b/templates/client/includes/sidebar.html
@@ -30,22 +30,34 @@
         </a>
     </nav>
     
-    <div class="sidebar-footer">
-        <div class="user-info">
-            <div class="user-avatar">U</div>
-            <div class="user-details">
-                <span class="user-name">{{ request.user.get_full_name|default:"Utilisateur" }}</span>
-                <span class="user-role">RegX Admin</span>
-            </div>
+   <div class="sidebar-footer">
+    <div class="user-info">
+        <div class="user-avatar">
+            {{ request.user.get_full_name|default:request.user.username|first|upper }}
         </div>
-        
-        <!-- ADD THE LOGOUT BUTTON HERE -->
-        <form method="post" action="{% url 'rawdocs:logout' %}" class="logout-form">
-            {% csrf_token %}
-            <button type="submit" class="btn-logout">
-                <i class="material-icons">logout</i>
-                <span>Déconnexion</span>
-            </button>
-        </form>
+        <div class="user-details">
+            <span class="user-name">{{ request.user.get_full_name|default:request.user.username }}</span>
+            <span class="user-role">
+                {% if request.user.userprofile.role == 'client' %}
+                    Client
+                {% elif request.user.userprofile.role == 'metadonneur' %}
+                    Métadonneur
+                {% elif request.user.userprofile.role == 'expert' %}
+                    Expert
+                {% elif request.user.userprofile.role == 'annotateur' %}
+                    Annotateur
+                {% else %}
+                    Utilisateur
+                {% endif %}
+            </span>
+        </div>
     </div>
+    <form method="post" action="{% url 'rawdocs:logout' %}" class="logout-form">
+        {% csrf_token %}
+        <button type="submit" class="btn-logout">
+            <i class="material-icons">logout</i>
+            <span>Déconnexion</span>
+        </button>
+    </form>
+</div>
 </div>
